SUBDIRS = \
 atomic_op    \
 bgl          \
 barrier      \
 collective   \
 debug        \
 exception    \
 fxlogger     \
 globject     \
 heap         \
 ltopology    \
 math         \
 multicast    \
 platform     \
 pthread      \
 ptopology    \
 queues       \
 reactor      \
 rnew         \
 rpc          \
 statistic    \
 trace        \
 util_comm    \
 util_cpp     \
 throbber     \
 a2a          \
 blade
 
