AC_INIT(pk, 1.0)
AM_INIT_AUTOMAKE
AC_CONFIG_FILES([
 pthread/Makefile
 pthread/include/Makefile
 a2a/Makefile
 a2a/include/Makefile
 a2a/src/Makefile
 blade/Makefile
 blade/include/Makefile
 blade/src/Makefile
 throbber/Makefile
 throbber/src/Makefile
 bgl/test/Makefile
 bgl/Makefile
 bgl/include/Makefile
 fft/Makefile
 fft/include/Makefile
 rpc/test/Makefile
 rpc/Makefile
 rpc/include/Makefile
 heap/Makefile
 heap/include/Makefile
 math/src/Makefile
 math/test/Makefile
 math/Makefile
 math/include/Makefile
 rnew/test/Makefile
 rnew/Makefile
 rnew/include/Makefile
 collective/test/Makefile
 collective/Makefile
 collective/include/Makefile
 ptopology/Makefile
 ptopology/include/Makefile
 reactor/src/Makefile
 reactor/test/Makefile
 reactor/Makefile
 reactor/include/Makefile
 debug/Makefile
 debug/include/Makefile
 trace/src/Makefile
 trace/Makefile
 trace/include/Makefile
 exception/src/Makefile
 exception/Makefile
 exception/include/Makefile
 atomic_op/Makefile
 atomic_op/include/Makefile
 globject/src/Makefile
 globject/test/Makefile
 globject/Makefile
 globject/include/Makefile
 blimpi/test/Makefile
 multicast/test/Makefile
 multicast/Makefile
 multicast/include/Makefile
 Makefile
 fxlogger/src/Makefile
 fxlogger/Makefile
 fxlogger/include/Makefile
 random/Makefile
 random/include/Makefile
 queues/test/Makefile
 queues/Makefile
 queues/include/Makefile
 ltopology/Makefile
 ltopology/include/Makefile
 barrier/Makefile
 barrier/include/Makefile
 platform/src/Makefile
 platform/Makefile
 platform/include/Makefile
 statistic/Makefile
 statistic/include/Makefile
 util_comm/Makefile
 util_comm/include/Makefile
 util_test/test/Makefile
 util_test/Makefile
 util_test/include/Makefile
 util_aix/Makefile
 util_aix/include/Makefile
 util_bgl/Makefile
 util_bgl/include/Makefile
 util_cpp/Makefile
 util_cpp/include/Makefile
 ])
AC_OUTPUT
