pkgdata_HEADERS = \
 bin2trcdel.cpp \
 binbrowser.cpp \
 fxlog2bin.cpp \
 fxlog2del.cpp \
 fxlog.cpp \
 pktrace.cpp \
 pktrace_pk.cpp \
 resize_pk.cpp \
 selecttrace.cpp \
 testmap.cpp \
 timestamp2groupedintervalstats.cpp \
 timestamp2interval.cpp \
 timestamp2intervalstats.cpp \
 timestamp2mp.cpp \
 trcdel2bin.cpp \
 trcmetadata.cpp \
 trcutil.cpp 
